--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="button">ask</string>
+    <string name="make_everyday_decisions_easier">Make everyday decisions easier</string>
+    <string name="ask">ask</string>
+    <string name="todo">TODO</string>
 </resources>
